# lightquery

./: .gitignore  CMakeLists.txt
include/lightquery/: actor_core.hh  actor_implementation.hh  actor_reference.hh  dataflow.hh  graph_handle.hh  op_code_tree.hh  operator_base.hh  operators.hh  tag_message.hh  typedef.hh
include/lightquery/util/: art.hh  common_utils.hh  radix_tree_index.hh
lightgraph/: endian_conversion.hh  ldb.hh  properties.hh  schema.hh  strhash.hh  typedef.hh
src/: actor_core.cc  actor_implementation.cc  dataflow.cc  graph_handle.cc  operator_base.cc  operators.cc
src/util/: art.cc
tests/: demo.cc  test_operator.cc  test_radix_tree.cc
